<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_4">

    <TextView
        android:id="@+id/header"
        android:layout_width="199dp"
        android:layout_height="47dp"
        android:fontFamily="@font/bambi"
        android:text="@string/header"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.641"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="342dp"
        android:layout_height="0dp"
        android:layout_marginTop="194dp"
        android:background="@drawable/text_custom"
        android:drawableStart="@drawable/ic_baseline"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/text_custom"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/pass"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress|textPersonName"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/username_input"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/username_input"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@drawable/custom_button"
        android:text="@string/btnlogin"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/forgotpass"
        android:textColor="#6D4C41"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/btnlogin"
        app:layout_constraintStart_toStartOf="@+id/btnlogin"
        app:layout_constraintTop_toBottomOf="@+id/btnlogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/dont_have_an_account"
            android:textColor="#6D4C41"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="sans-serif-black"
            android:text="@string/sign_up"
            android:textColor="#292525"
            tools:ignore="MissingConstraints" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>