<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Getstart">

    <TextView
        android:id="@+id/textView"
        android:layout_width="302dp"
        android:layout_height="0dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="377dp"
        android:fontFamily="@font/bambi"
        android:text="@string/tj_s_candle_co"
        android:textColor="#10100F"
        android:textColorHighlight="#503434"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="118dp"
        android:layout_height="128dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_3" />

    <Button
        android:id="@+id/button"
        android:layout_width="156dp"
        android:layout_height="51dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/custom_button"
        android:text="@string/get_started1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>