<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_4"
    tools:context=".Register">

    <TextView
        android:id="@+id/header"
        android:layout_width="199dp"
        android:layout_height="47dp"
        android:fontFamily="@font/bambi"
        android:text="@string/register"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.556"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137" />

    <EditText
        android:id="@+id/username_input"
        android:layout_width="342dp"
        android:layout_height="49dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_custom"
        android:drawableLeft="@drawable/ic_baseline"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="341dp"
        android:layout_height="52dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_custom"
        android:drawableLeft="@drawable/ic_baseline_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textWebEmailAddress|textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/username_input"
        app:layout_constraintStart_toStartOf="@+id/username_input"
        app:layout_constraintTop_toBottomOf="@+id/username_input" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_custom"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="********"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/text_custom"
        android:drawableLeft="@drawable/ic_baseline_security_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="********"
        android:importantForAutofill="no"
        android:inputType="number|textPersonName|textPhonetic"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toBottomOf="@+id/pass" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/password1" />

    <TextView
        android:id="@+id/alreadyexist"
        android:layout_width="206dp"
        android:layout_height="26dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="Already have an account?"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.674"
        app:layout_constraintStart_toStartOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button2" />
</androidx.constraintlayout.widget.ConstraintLayout>